<resources>
    <string name="app_name">My Favourite Movies</string>
    <string-array name="genre_array">
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Comedy</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Crime</item>
        <item>Others</item>
    </string-array>
    <string name="add_movie">Add Movie</string>
    <string name="movies_by_year">Movies By Year</string>
    <string name="movie_by_rating">Movies By Rating</string>
    <string name="name">Name :</string>
    <string name="input_movie_name_here">Input Movie Name Here</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="year">Year</string>
    <string name="imdb">IMDB</string>
    <string name="add_movie_title">Add Movie</string>
    <string name="movies_by_rating">Movies By Rating</string>
    <string name="title">Title :</string>
    <string name="description_">Description :</string>
    <string name="genre_">Genre :</string>
    <string name="rating_">Rating :</string>
    <string name="year_">Year :</string>
    <string name="imdb_">IMDB :</string>
    <string name="imdbval">imdbVal</string>
    <string name="finish">Finish</string>
    <string name="save_changes">Save Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="show_list_by_year">Show List By Year</string>
    <string name="show_list_by_rating">Show List By Rating</string>
    <string name="_0">0</string>

</resources>
