<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.yatee.favouritemovies.MyFavMoviesFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:text="@string/add_movie"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/AddMovie" />

        <Button
            android:text="@string/edit"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/Edit" />

        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/DeleteMovie"
            android:text="@string/delete_movie" />

        <Button
            android:text="@string/show_list_by_year"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ShowListByYear" />

        <Button
            android:text="@string/show_list_by_rating"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ShowListByRating" />
    </LinearLayout>

</FrameLayout>
