<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yatee.favouritemovies.AddMovieFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/title2"
            android:layout_weight="0.43"
            tools:ignore="NestedWeights" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/nameEditText"
            android:ems="10"
            android:layout_weight="0.57"
            android:hint="@string/input_movie_name_here" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:text="@string/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:layout_weight="0.43"
            tools:ignore="NestedWeights"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:layout_weight="0.57"
            android:ems="10"
            android:id="@+id/descriptionValue"
            android:maxLength="1000"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/genre"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/genre"
            tools:ignore="NestedWeights"
            android:layout_weight="0.43"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner"
            android:layout_weight="0.57"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rating"
            android:layout_weight="0.43"
            tools:ignore="NestedWeights"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="5"
            android:layout_weight="0.43" />
        <TextView
            android:id="@+id/ratingTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:text="@string/_0"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="0.43"
            tools:ignore="NestedWeights"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/year"
            android:layout_weight="0.57" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">

        <TextView
            android:text="@string/imdb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:id="@+id/textView4"
            tools:ignore="NestedWeights"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/imdb"
            android:layout_weight="0.57"
            />

    </LinearLayout>

    <Button
        android:text="@string/add_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/addMovie" />
</LinearLayout>
</FrameLayout>
